<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World</string>
    <string name="app_name">Waylay</string>
    <string name="service_name">Waylay activity service</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="push_all">Push every</string>
    <string name="stop_pushing">Pushing every</string>
    <string name="regenerate">Regenerate</string>
    <string name="use_authentication">Use authentication</string>
    <string name="token">Token</string>
    <string name="secret">Secret</string>
    <string name="seconds">seconds.</string>
    <string-array name="connection_types">
        <item>REST</item>
        <item>MQTT</item>
    </string-array>

</resources>